# fidibench

./: CMakeLists.txt  CmdLineArgParser.cpp  CmdLineArgParser.h  CubeDecomp.h  Dockerfile  Filter.h  LICENSE  MultiArrayIter.h  README.md  fidibench.def  fidibench_apptainer_build.sl  fidibench_apptainer_build_intel.sl  fidibench_gcc_openmpi.def  fidibench_intel.def  fidibench_intel.sl  laplacian.cxx  laplacian.ll  testCubeDecomp.cxx  testMultiArrayIter.cxx  upwind.jl  upwind.py  upwind2.jl  upwind3.jl  upwind3.py  upwindMPI.py  upwindTemplated.cxx  writeVTK.h
.github/workflows/: test.yml
cmake/Modules/: FindJuliaExecutable.cmake  FindPythonExecutable.cmake
cxx/: CMakeLists.txt  CubeDecomp.cpp  CubeDecomp.h  Filter.cpp  Filter.h  MultiArrayIter.cpp  MultiArrayIter.h  writeVTK.cpp  writeVTK.h
cylc-src/julia_vs_cxx/: analyse.py  flow.cylc
laplacian/cxx/: CMakeLists.txt  CubeDecomp.h  Filter.h  MultiArrayIter.h  laplacian.cxx  stencil2d.cxx  writeVTK.h
matmult/fortran/: CMakeLists.txt  matmult.F90
pictures/: fortran_vs_c++.py  mahuika.py
scripts/: CMakeLists.txt  fdi_julia_vs_python.py  fdi_mahuika_threads_vs_gpu.py  fdi_maui_vs_mahuika.py  fdi_open_cxx_fortran.py  fdi_plot.py.in  fdi_upwind_openmp.py  generatePicture.py
upwind/: CMakeLists.txt
upwind/cxx/: CMakeLists.txt  compute_flat_index_offset_x.h  compute_flat_index_offset_y.h  compute_flat_index_offset_z.h  compute_index_set.h  saveVTK.h  upwind.cxx  upwind2.cxx  upwindAcc.cxx  upwindAcc2.cxx  upwindAcc2_mahuika.sl.in  upwindAcc2_mahuika_a100.sl.in  upwindAcc2_mahuika_p100.sl  upwindAcc2_mahuika_p100.sl.in  upwindAcc2_singularity.sl.in  upwindAcc_mahuika.sl.in  upwindAcc_mahuika_a100.sl.in  upwindAcc_mahuika_p100.sl.in  upwindCxx_fitzroy.ll.in  upwindCxx_fitzroy_1.ll.in  upwindCxx_fitzroy_16.ll.in  upwindCxx_fitzroy_2.ll.in  upwindCxx_fitzroy_32.ll.in  upwindCxx_fitzroy_4.ll.in  upwindCxx_fitzroy_64.ll.in  upwindCxx_fitzroy_8.ll.in  upwindCxx_kupe.sl.in  upwindCxx_kupe_40.sl.in  upwindCxx_mahuika.sl.in  upwindCxx_maui.sl.in  upwindCxx_pan.sl.in  upwindCxx_pan_1.sl.in  upwindCxx_pan_16.sl.in  upwindCxx_pan_2.sl.in  upwindCxx_pan_32.sl.in  upwindCxx_pan_4.sl.in  upwindCxx_pan_8.sl.in  upwindMpi.cxx  upwindMpiCxx_craypat.sl  upwindMpiCxx_hpc3.sl.in  (+5 more)
upwind/cython/: setup.py  upwind5.pyx
upwind/fortran/: CMakeLists.txt  psy_omp.py  upwind.F90  upwind.F95  upwind.f90  upwindAcc.F90  upwindF03.F90  upwindF03.F95  upwindF08.F90  upwindF08.f90  upwindF08Acc.f90  upwindF08Acc.sl.in  upwindF08AccCpu.sl.in  upwindF08Gpu.F90  upwindF08Gpu.sl.in  upwindF08Gpu_azure.sl.in  upwindF08OmpGpu.f90  upwindF08OmpGpu.sl.in  upwindFortran_fitzroy.ll.in
upwind/julia/: CMakeLists.txt  saveVTK.jl  upwind.jl  upwind3.jl
upwind/python/: CMakeLists.txt  saveVTK.py  upwind.py  upwind2.py  upwind3.py  upwindMPI.py
